# rl_arc_3

./: .env.example  .gitignore  README.md  pyproject.toml
config/: logging.json
draft/: arc_api.py  dqn_train.py
draft/legacy_naive/: dqn.py  dqn_agent.py  dqn_legacy.py
src/rl_arc_3/: __init__.py  dqn.py  env.py  main.py  memory.py  plot_metric.py  settings.py  trainer.py
src/rl_arc_3/adapters/: arc_style.py  full.py  keyboard_only.py  utils.py
src/rl_arc_3/agent/: adapters.py  dqn.py  dqn_actor.py  dqn_agent.py  dqn_learner.py  example_agent.py  interface.py  myplay.py
src/rl_arc_3/agents/: dqn_agent.py  example_agent.py  myplay.py
src/rl_arc_3/base/: agent.py  checkpointable.py  clone.py  env.py  memory.py  model.py  model_adapter.py  trainer.py  utils.py
src/rl_arc_3/env/: arc.py  fake.py  gym.py  interface.py
src/rl_arc_3/model/: conv_basic.py  dqn.py  dqn_legacy.py  factory.py  interface.py  memory.py
src/rl_arc_3/models/: memory.py
src/rl_arc_3/trainer/: dqn.py  dqn_trainer.py  interface.py  metric_hubs.py  offpolicy.py  utils.py
src/rl_arc_3/utils/: constants.py  utils.py
