[project]
name = "rl-arc-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Méo Desbois-Renaudin", email = "meo-externe.desbois-renaudin@edf.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "arc-agi>=0.0.7",
]

[project.scripts]
rl-arc-3 = "rl_arc_3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
