[project]
name = "rl-arc-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Méo Desbois-Renaudin", email = "meo-externe.desbois-renaudin@edf.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "arc-agi>=0.9.1",
    "gymnasium>=1.2.3",
    "pyqt6>=6.10.2",
    "torch>=2.10.0",
]

[project.scripts]
rl-arc-3 = "rl_arc_3:main"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
name = "pytorch"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
