[project]
name = "rl-arc-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Méo Desbois-Renaudin", email = "meo.desbois@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "arc-agi>=0.9.1",
    "gymnasium>=1.2.3",
    "pandas>=3.0.1",
    "pyqt6>=6.10.2",
    "torch>=2.10.0",
]

[project.optional-dependencies]
cu126 = [
    "torch>=2.10.0",
]
cpu = [
    "torch>=2.10.0",
]

[tool.uv]
conflicts = [
    [
      { extra = "cu126" },
      { extra = "cpu" },
    ],
]

[project.scripts]
rl-arc-3 = "rl_arc_3:main"

[tool.uv.sources]
torch = [
    { index = "torch-cu126", extra = "cu126" },
    { index = "torch-cpu", extra = "cpu" },
]

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.1.0",
]
